...
    onToggleFavorite: (Movie) -> Unit
) {

    val context = LocalContext.current

    Scaffold(
        modifier = Modifier.testTag("detail_screen"),
        topBar = {
            CenterAlignedTopAppBar(
                {
                    Text(
                        text = stringResource(R.string.details)
                    )
...
